--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm install --legacy-peer-deps && react-scripts build",
     "postbuild": "cp build/index.html build/404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -47,6 +47,6 @@
   "devDependencies": {
     "@types/react": "^19.1.2",
     "gh-pages": "^6.3.0",
-    "typescript": "^5.8.3"
+    "typescript": "^4.9.5"
   }
 }
