--- a/package.json
+++ b/package.json
@@ -3,28 +3,38 @@
   "version": "0.1.0",
   "homepage": ".",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0 <=20.17.0",
+    "npm": ">=8.0.0"
+  },
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.9.0",
-    "framer-motion": "^12.9.2",
+    "axios": "^1.6.2",
+    "framer-motion": "^10.16.5",
     "leaflet": "^1.9.4",
-    "lucide-react": "^0.503.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "lucide-react": "^0.292.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm install --legacy-peer-deps && react-scripts build",
+    "start:prod": "NODE_ENV=production node --max-old-space-size=2048 node_modules/.bin/react-scripts start",
+    "start:static": "serve -s build",
+    "build": "npm install --omit=dev && react-scripts build",
+    "build:prod": "npm install --omit=dev && node --max-old-space-size=2048 node_modules/.bin/react-scripts build",
+    "build:minimal": "GENERATE_SOURCEMAP=false npm install --omit=dev && node --max-old-space-size=1024 node_modules/.bin/react-scripts build",
     "postbuild": "cp build/index.html build/404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "preinstall": "npm config set engine-strict true && npm config set legacy-peer-deps false && npm config set package-lock true"
   },
   "eslintConfig": {
     "extends": [
@@ -45,8 +55,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^19.1.2",
-    "gh-pages": "^6.3.0",
+    "@types/react": "^18.2.37",
+    "gh-pages": "^6.0.0",
     "typescript": "^4.9.5"
   }
 }
