--- a/.github/workflows/stop.yml
+++ b/.github/workflows/stop.yml
@@ -14,6 +14,6 @@ jobs:
         run: npm install -g railway
 
       - name: 停止服务
-        run: railway down
+        run: railway down --project c222d1e2-78df-4da7-8315-e7860fe35058
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
