--- a/.github/workflows/start.yml
+++ b/.github/workflows/start.yml
@@ -14,6 +14,6 @@ jobs:
         run: npm install -g railway
 
       - name: 启动服务
-        run: railway up
+        run: railway up --project c222d1e2-78df-4da7-8315-e7860fe35058
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
